--- a/fichiers_fournis/Makefile
+++ b/fichiers_fournis/Makefile
@@ -1,11 +1,9 @@
 CC=gcc
 CFLAGS=-Wall -g
 
-all: tst shell
-
-tst: tst.o readcmd.o
+all: shell
 
 shell: shell.o readcmd.o
 
 clean:
-	rm -f shell shell.o readcmd.o tst tst.o
+	rm -f shell shell.o readcmd.o
